# erp-backend

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
api/: models.py
api/migrations/: 0001_initial.py
app/: settings.py
base/: serializers.py  urls.py  views.py
base/migrations/: 0001_initial.py  0002_rename_price_inventory_price_per_unit.py
base/models/: employees.py  inventory.py
base/urls/: employees.py  inventory.py
base/views/: inventory.py
erp_backend/: asgi.py  settings.py  urls.py  wsgi.py
src/: entrypoint.sh  pyproject.toml
src/base/: serializers.py
src/base/migrations/: 0001_initial.py
src/base/models/: transactions.py
src/base/urls/: transactions.py
src/base/views/: employees.py  transactions.py
src/erp_backend/: settings.py  urls.py
src/roles/: serializers.py
src/roles/migrations/: 0001_initial.py
src/roles/models/: employees.py  permissions.py  roles.py
src/roles/urls/: employees.py  permissions.py  roles.py
src/roles/views/: employees.py  permissions.py  roles.py
